# too-salty

./: .env.example  .gitignore  .pre-commit-config.yaml  02_submit_baseline.sh  03_submit_finetune.sh  04_submit_ema_swa.sh  05_submit_evaluate_soups.sh  06_submit_evaluate_ema_swa.sh  08_submit_ternary_eval.sh  README.md  build_dataset.py  data_analysis.ipynb  evaluate.py  evaluate_ema_swa.py  experiments.py  finetune.py  main.py  pyproject.toml  setup_env.sh  submit_experiments.sh  train.py  train_ema_swa.py  walk_folders.py
analysis/: alpha_sweep_results.csv  angle_change_metrics.csv  angle_change_metrics.parquet  combined_analysis.parquet  ema_swa_robustness_results.csv  ema_swa_robustness_results.parquet  ema_swa_robustness_results_compact.csv  permutation_ablation_results.csv  permutation_ablation_results.parquet  rand_soups_seed_42.csv  rand_soups_seed_42.parquet  similarity_metrics.csv  similarity_metrics.parquet
analysis/ternary/: ternary_240_3_170_2_250_4.parquet  ternary_240_3_190_2_250_4.parquet  ternary_240_3_210_2_250_4.parquet  ternary_240_3_250_4_160_4.parquet  ternary_240_3_250_4_200_2.parquet  ternary_250_4_230_4_240_3.parquet  ternary_260_4_180_4_280_1.parquet  ternary_270_4_220_2_250_4.parquet
configs/: baseline.yaml  resnet50_baseline.yaml  resnet50_finetune.yaml  wrn2810.yaml
iclr_report/: iclr2026_conference.sty  references.bib  report.tex  reviewer_response.tex
iclr_report/parts/: 0_boilerplate.tex  1_title_abstract.tex  2_introduction.tex  3_experiments.tex  4_conclusion.tex  5_appendix.tex
models/soup_models/: finetune_results.csv  finetune_results.parquet  rand_soups_seed_42.csv  rand_soups_seed_42.parquet
notebooks/: 1. Shared Epochs.ipynb  2. Permutations.ipynb  3. Similarities.ipynb  4. Transitivity.ipynb  5. Corrupted.ipynb  6. EMA_SWA.ipynb  6.1 Soup_values_for_final_table.ipynb  8. Alpha Sweep.ipynb  9. Soup performance and gain.ipynb  preprocessing.py  style.mplstyle  ternary_visualization.ipynb
report/: references.bib  report.bbl  report.tex
report/figures/: branching_models.drawio
report/parts/: 0_boilerplate.tex  1_title_abstract.tex  2_introduction.tex  3_experiments.tex  3_theory.tex  4_conclusion.tex  4_experiments.tex  5_appendix.tex  6_appendix.tex
scripts/: 00_check_cuda.py  01_build_dataset.py  02_train_baseline.py  03_finetune_branches.py  04_train_ema_swa.py  05_evaluate_soups.py  06_evaluate_ema_swa.py  07_run_experiments.py  ternary_simplex_eval.py
src/: datasets.py  models.py
src/salty/: __init__.py  datasets.py  evaluation.py  model_manager.py  models.py  permute_model.py  resnet.py  similarity_metrics.py  similarity_metrics_from_logits.py  similarity_metrics_from_models.py  training.py  utils.py  wide_resnet.py
src/salty/unit_tests/: test_permute_models.py  test_similarities.py
