[project]
name = "too-salty"
version = "0.1.0"
description = "Model Souping through Alignment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.5",
    "pillow>=11.2.0",
    "python-dotenv>=1.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]


[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu130 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
# Make it impossible to enable both extras at once
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
  # When the `cpu` extra is enabled, use the CPU index
  { index = "pytorch-cpu",  extra = "cpu" },
  # When the `cu130` extra is enabled, use the CUDA 13.0 index
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu",  extra = "cpu" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
]


[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
